--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,5 @@
 <div class="cards">
-  <% @cocktails.each do |cocktail| %>
+  <% @cocktails_letter.each do |cocktail| %>
     <div class="card-product">
       <img src= <%= cocktail["strDrinkThumb"] %> />
       <div class="card-product-infos">
