--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,7 @@
 <div class="footer">
   <div class="footer-links">
     <a href="https://www.thecocktaildb.com/api.php"><i class="fas fa-cocktail"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/meagan-butters/"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
     This footer is made with <i class="fas fa-heart"></i> at Le Wagon
