Changed styling, added show page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,4 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "components/card";
-@import "components/navbar";
-@import "components/footer";
+@import "pages/show";
