--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,4 @@
-<div class="cards">
-  <% @letter_cocktails.each do |cocktail| %>
-    <div class="card-product">
-      <img src= <%= cocktail["strDrinkThumb"] %> />
-      <div class="card-product-infos">
-        <h2><%= cocktail["strDrink"] %></h2>
-        <p><%= cocktail["strCategory"] %></p>
-      </div>
-    </div>
-  <% end %>
+<div> 
+  <h1>Welcome to Meagan's Cocktail DB</h1>
+  <h2>Select a letter to start</h2>
 </div>
