--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,41 +1,59 @@
-.cards {
+.card-container {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  column-gap: 10px;
+  row-gap: 15px;
+  justify-items: center;
+}
+
+.card {
+  border: 3px solid pink;
+  border-image: linear-gradient(45deg, #00DBDE 0%, #FC00FF 100%) 10;
+  background-color: $light-gray;
+  -webkit-box-shadow: 10px 10px 44px -16px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 44px -16px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 44px -16px rgba(0,0,0,0.75);
+}
+
+.card a {
+  color: $gray;
 }
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
-  .cards {
+  .card-container {
     grid-template-columns: 1fr;
   }
 }
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
-  .cards {
+  .card-container {
     grid-template-columns: 1fr;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-  .cards {
+  .card-container {
     grid-template-columns: 1fr 1fr;
   }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+  .card-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-  .cards {
-    grid-template-columns: 1fr 1fr 1fr;
+  .card-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
 }
 
