--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,6 @@
 // Import your components CSS files here.
-@import "alert";
-@import "avatar";
 @import "navbar";
 @import "letter";
+@import "content";
+@import "cards";
+@import "footer";
