--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div class="container">
+    <div class="content">
       <%= yield %>
     </div>
     <%= render "shared/footer" %>
