--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,8 @@
 <div class="head">
   <h1>Cocktails</h1>
-  <div>
-    <ul>
+  <div class="toolbar" role="toolbar" aria-label="Toolbar with button groups">
       <% ('a'..'z').to_a.each do |letter| %>
-        <li class="letter"><%= link_to letter, cocktail_index_path({letter: letter}) %></li>
+        <button class="btn btn-light"><%= link_to letter, cocktail_index_path({letter: letter}) %></button>
       <% end %>
     </ul>
   </div>
