Added ingredients and doses to show page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,6 @@
 // Specific CSS for your home-page
-ul {
-  list-style: none;
-}
 
-li {
-  display:inline;
+.home {
+  padding: 5%;
+  text-align:center;
 }
