--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -16,6 +16,13 @@
   width: 100%;
   text-align: center;
   margin-bottom: 10px;
+
+  #title {
+    a {
+      padding:5px;
+      color: black;
+    }
+  }
 }
 
 .toolbar {
