--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div> 
-  <h1>Welcome to Meagan's Cocktail DB</h1>
+<div class="home"> 
+  <h1>Welcome to Cocktail Helper</h1>
   <h2>Select a letter to start</h2>
+  <p>This cocktail database was created by <a href="https://www.linkedin.com/in/meagan-butters/" target="_blank">Meagan Butters</a> with Ruby on Rails 6.0.3.2 using <a href="https://www.thecocktaildb.com/api.php" target="_blank">The Cocktail DB API</a>.</p>
 </div>
