--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="head">
-  <h1 id="title"><%= link_to "Cocktail Helper", root_path %></h1>
+  <h1 id="title"><%= link_to "Cheers!", root_path %></h1>
   <div class="toolbar" role="toolbar" aria-label="Toolbar with button groups">
       <% ('a'..'z').to_a.each do |letter| %>
         <button class="btn btn-light btn-sm"><%= link_to letter, cocktail_index_path({letter: letter}) %></button>
