changed nav to hopefully not bug

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="head">
   <div></div>
   <div>
-    <h1 id="title"><%= link_to "Cheers!", root_path %> </h1>
+    <h1 id="title"><%= link_to "Cheers!", "/" %> </h1>
     <div class="toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <% ('a'..'z').to_a.each do |letter| %>
           <%= link_to letter, cocktail_index_path({letter: letter}), class: "btn btn-light btn-sm" %>
