--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -8,7 +8,33 @@
     background-color: $light-gray;
     overflow-y: scroll;
     border-radius: 10px;
+    
+  .search-form-control {
+    position: relative;
+    margin: 5%;
   }
+  
+  .search-form-control .btn {
+    position: absolute;
+    top: 8px;
+    bottom: 8px;
+    right: 8px;
+  }
+  
+  .search-form-control .form-control {
+    height: 3.5rem;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    border: 1px solid #E7E7E7;
+  }
+  
+  .search-form-control .form-control:focus {
+    border: 1px solid #1EDD88;
+    outline: none !important;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  }
+  }
+
+  
   
 // Scrollbar
 .content::-webkit-scrollbar-track
