--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div class="content">
+      <div class="content">
+        <%= render "shared/search" %>
       <%= yield %>
     </div>
     <%= render "shared/footer" %>
